adding a game updater

--- a/MonogameWpf2/MonogameWpf2/MonogameWpf2.csproj
+++ b/MonogameWpf2/MonogameWpf2/MonogameWpf2.csproj
@@ -81,6 +81,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\GameUpdater.cs" />
     <Compile Include="GameModules\IGameModule.cs" />
     <Compile Include="GameModules\MainGameModule.cs" />
     <Compile Include="Injection.cs" />
