--- a/MonogameWpf2/MonogameWpf2/MonogameWpf2.csproj
+++ b/MonogameWpf2/MonogameWpf2/MonogameWpf2.csproj
@@ -82,6 +82,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Controls\GameUpdater.cs" />
+    <Compile Include="GameModules\BlurGameModule.cs" />
+    <Compile Include="GameModules\FrameRateCounter.cs" />
     <Compile Include="GameModules\IGameModule.cs" />
     <Compile Include="GameModules\MainGameModule.cs" />
     <Compile Include="Injection.cs" />
