--- a/MonogameWpf2/MonogameWpf2/MonogameWpf2.csproj
+++ b/MonogameWpf2/MonogameWpf2/MonogameWpf2.csproj
@@ -74,25 +74,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Controls\GameControl.cs" />
-    <Compile Include="Module\BaseGameModule.cs" />
-    <Compile Include="Module\GameUpdater.cs" />
     <Compile Include="GameModules\BlurGameModule.cs" />
     <Compile Include="GameModules\FrameRateCounter.cs" />
-    <Compile Include="Module\IGameModule.cs" />
     <Compile Include="GameModules\MainGameModule.cs" />
     <Compile Include="Injection.cs" />
     <Compile Include="Models\Stamp.cs" />
     <Compile Include="Models\StampEffect.cs" />
     <Compile Include="Models\EffectsCollection.cs" />
-    <Compile Include="Module\IInternalGameModule.cs" />
     <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="Services\DeviceService.cs" />
-    <Compile Include="Services\GraphicsDeviceService.cs" />
-    <Compile Include="Util\Disposer.cs" />
-    <Compile Include="Util\GameControlHelper.cs" />
-    <Compile Include="Arguments\GameMouseButtonEventArgs.cs" />
-    <Compile Include="Arguments\GameMouseEventArgs.cs" />
     <Compile Include="Util\NotificationObject.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
@@ -103,9 +92,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Arguments\DrawEventArgs.cs" />
-    <Compile Include="Controls\DrawingSurface.cs" />
-    <Compile Include="Arguments\GraphicsDeviceEventArgs.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -149,6 +135,12 @@
   </Target>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MonoGame.Interop\MonoGame.Interop.csproj">
+      <Project>{5a05bca3-187d-4fac-adae-4aefcf8f10be}</Project>
+      <Name>MonoGame.Interop</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
